kubernetes/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/part-of: cognimon
spec:
  selector:
    app.kubernetes.io/name: auth-service
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
